// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Swatch 1`] = `
.c0 {
  width: 36px;
  height: 36px;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  background-color: white;
  margin-top: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:hover {
  border-color: #C1C6CC;
}

<div
  className="c0"
  color="white"
  height="36px"
  width="36px"
/>
`;

exports[`Swatch with hex value passed 1`] = `
.c0 {
  width: 36px;
  height: 36px;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  background-color: #4c6670;
  margin-top: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:hover {
  border-color: #C1C6CC;
}

<div
  className="c0"
  color="#4c6670"
  height="36px"
  width="36px"
/>
`;

exports[`Swatch with width and height set 1`] = `
.c0 {
  width: 50px;
  height: 25px;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  background-color: blue;
  margin-top: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:hover {
  border-color: #C1C6CC;
}

<div
  className="c0"
  color="blue"
  height="25px"
  width="50px"
/>
`;
